@@ -125,6 +125,11 @@ src_prepare() {
 	fi
 
 	epatch_user
+
+	# Fix filename reference in redirected man page
+	sed -i -e "/^\\.so/s/etags/&-${EMACS_SUFFIX}/" doc/man/ctags.1 \
+		|| die "unable to sed ctags.1"
+
 	AT_M4DIR=m4 eautoreconf
 }
 
